# FastDrop

./: CMakeLists.txt  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
FastDrop/: index.html  package-lock.json  package.json
FastDrop/src/: main.tsx
FastDrop/src/pages/: Welcome.tsx
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/include/: ai_service.hpp  config.hpp  file_storage.hpp  qr_service.hpp  routes.hpp  session_manager.hpp
backend/src/: ai_service.cpp  code_gen.cpp  file_storage.cpp  main.cpp  qr_service.cpp  routes.cpp  session_manager.cpp
include/: code_gen.hpp  file_storage.hpp  routes.hpp
src/: code_gen.cpp  file_storage.cpp  main.cpp  main.tsx  routes.cpp
src/components/: navbar.tsx
src/css/: Connect.css  Share.css  index.css  navbar.css  welcome.css
src/pages/: Connect.tsx  Share.tsx  Welcome.tsx
